--- a/Download/Views/Product/AddVersion.cshtml
+++ b/Download/Views/Product/AddVersion.cshtml
@@ -11,12 +11,13 @@
 
 
 <h2>Add Version</h2>
-<div style="background-color: rgba(255, 255, 255, 0.25); border: 2px solid #ffffff" class="form-horizontal" class="clearfix">
+<div style="background-color: rgba(255, 255, 255, 0.25); border: 2px solid #ffffff" class="form-horizontal clearfix" >
     @using (Html.BeginForm("AddVersion", "Product", new { searchString = search, page = pageNum}, FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-group">
+        <div class="col-xs-12">
+            
             <h4>@Model.ProductName</h4>
             <hr />
             @Html.ValidationSummary(true)
@@ -27,9 +28,7 @@
             <fieldset>
                 <div class=" col-md-10">
 
-                    <p>
                         <input type="file" name="FileUpload1" />
-                    </p>
                 </div>
             </fieldset>
         </div>
@@ -39,9 +38,8 @@
             <fieldset>
                 <div class=" col-md-10">
 
-                    <p>
                         <input type="file" name="FileUpload2" />
-                    </p>
+
                 </div>
             </fieldset>
 
@@ -52,9 +50,8 @@
             <fieldset>
                 <div class=" col-md-10">
 
-                    <p>
                         <input type="file" name="FileUpload3" />
-                    </p>
+
                 </div>
             </fieldset>
         </div>
