--- a/Download/Views/Product/EditVersion.cshtml
+++ b/Download/Views/Product/EditVersion.cshtml
@@ -14,7 +14,8 @@
     @using (Html.BeginForm("EditVersion", "Product", new { searchString = search, page = page}, FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.VersionId);
+        @Html.HiddenFor(model => model.VersionId)
+
 
         <div class="form-horizontal">
             <div class="form-group">
